Refactor CourseMapper for simplicity and efficiency
The stream API usage has been simplified in CourseMapper.java, wherein Collectors.toList() method was replaced by the simpler toList() method. Additionally, the redundant method convertLessonToLessonDTO() has been removed as it was not used anywhere else in the project. This change was made to increase code readability and efficiency.